--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
 		<title>Yang's Work</title>
 	</head>
 	<body>
-		<div id="root" class="container"></div>
+		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
