--- a/client/index.html
+++ b/client/index.html
@@ -12,3 +12,6 @@
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
+<script>
+	document.querySelector('.fullpage-wrapper').scrollTop = 100;
+</script>
