--- a/client/index.html
+++ b/client/index.html
@@ -13,5 +13,5 @@
 	</body>
 </html>
 <script>
-	document.querySelector('.fullpage-wrapper').scrollTop = 100;
+	document.querySelectorAll('.fullpage-wrapper').length;
 </script>
