--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
 		<link rel="icon" type="image/svg+xml" href="./src/assets/img/bunny.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="https://fonts.googleapis.com/css?family=Lato:700&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="./src/assets/css/reset.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 		<title>Yang's Work</title>
 	</head>
